[gd_scene load_steps=4 format=3 uid="uid://cuv71i0daq75d"]

[ext_resource type="Script" path="res://src/main/board/Board.gd" id="1_5hmtf"]
[ext_resource type="AudioStream" uid="uid://c5seispbk1imq" path="res://assets/menu_1.wav" id="3_jqwdq"]
[ext_resource type="AudioStream" uid="uid://b51inbucunbgp" path="res://assets/menu_7.wav" id="4_x2ivq"]

[node name="Board" type="Container"]
script = ExtResource("1_5hmtf")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="MergeAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jqwdq")

[node name="MoveAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_x2ivq")
volume_db = 5.0

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
